; ModuleID = '/home/carl/AnghaBench/lede/target/linux/at91/image/dfboot/src/extr_main.c_AT91F_StartBoot.c'
source_filename = "/home/carl/AnghaBench/lede/target/linux/at91/image/dfboot/src/extr_main.c_AT91F_StartBoot.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SUCCESS = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [5 x i8] c"Jump\00", align 1
@AT91C_BOOT_ADDR = common dso_local global i32 0, align 4
@IMAGE_ERROR = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @AT91F_StartBoot to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @AT91F_StartBoot() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = call i32 (...) @AT91F_LoadBoot()
  store i32 %3, i32* %2, align 4
  %4 = load i32, i32* @SUCCESS, align 4
  %5 = icmp ne i32 %3, %4
  br i1 %5, label %6, label %8

6:                                                ; preds = %0
  %7 = load i32, i32* %2, align 4
  store i32 %7, i32* %1, align 4
  br label %17

8:                                                ; preds = %0
  %9 = call i64 (...) @AT91F_ResetRegisters()
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %15

11:                                               ; preds = %8
  %12 = call i32 @printf(i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0))
  %13 = load i32, i32* @AT91C_BOOT_ADDR, align 4
  %14 = call i32 @Jump(i32 %13)
  br label %15

15:                                               ; preds = %11, %8
  %16 = load i32, i32* @IMAGE_ERROR, align 4
  store i32 %16, i32* %1, align 4
  br label %17

17:                                               ; preds = %15, %6
  %18 = load i32, i32* %1, align 4
  ret i32 %18
}

declare dso_local i32 @AT91F_LoadBoot(...) #1

declare dso_local i64 @AT91F_ResetRegisters(...) #1

declare dso_local i32 @printf(i8*) #1

declare dso_local i32 @Jump(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
